--- a/Frontend/src/componentCSS/viewMenu.css
+++ b/Frontend/src/componentCSS/viewMenu.css
@@ -84,7 +84,7 @@
 .menu-title {
   font-size: 2.5rem;
   font-weight: bold;
-  margin-top: 0;
+  margin-top: 48px;
   margin-bottom: 0.5rem;
   color: #222;
   text-align: center;
